--- a/assets/scss/layout/_form.scss
+++ b/assets/scss/layout/_form.scss
@@ -68,10 +68,12 @@
       margin: 0 auto;
 
       .form_contact {
-        width: 320px;
-        border: 1px solid;
+        width: 495px;
+        border: 3px solid;
         border-color: #00d991;
         background-color: #fff;
+        height: 725px;
+        padding: 30px;
 
         input {
           width: 90%;
