--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,7 +11,6 @@
   width: 100%;
   margin-bottom: 50px;
 
-
   video {
     display: none;
 
@@ -24,15 +23,25 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-bottom:50px;
+    padding-bottom: 50px;
+    h1{
+      color: #373737;
+      font-size:50px;
+    }
+    h3 {
+      font-size:30px;
+      letter-spacing: 5px;
+      color: $title;
+    }
     img {
-      width: 169px;
+      margin-right: -4px;
+      width: 100px;
       transform: rotate(-90deg);
     }
   }
 }
 
-@media (min-width:768px) {
+@media (min-width: 768px) {
   .headerVideo {
     video {
       display: block;
@@ -60,10 +69,10 @@
         max-width: 553px;
         margin-top: 30px;
       }
-      h3{
-        color:$title;
-        margin-left:40px;
-        margin-top:10px
+      h3 {
+        color: $title;
+        margin-left: 40px;
+        margin-top: 10px
       }
 
       img {
