--- a/assets/scss/layout/_navMobile.scss
+++ b/assets/scss/layout/_navMobile.scss
@@ -1,35 +1,22 @@
 @import "../modules/variables";
 @import "../base/base";
 
-.main-nav {
-  .container {
-    display: none;
-    ul {
-      #news {
-        margin-top: -5px;
-        padding: 5px 8px;
-        border: 2px solid $title;
-        color: $title;
-        cursor: pointer;
-      }
-    }
-    img {
-      width: 30px;
-      height: 35px;
-    }
+@media (max-width: 768px) {
+  #ham{
+    position: fixed;
+    z-index: 50;
   }
-}
-
-@media (min-width: 768px) {
-  .main-nav {
+  .main-mobile-nav {
+    flex-direction: column;
     margin: 0 auto;
+    left: -100%;
     position: fixed;
     z-index: 50;
     width: 100%;
     background: #333333;
     align-items: center;
     display: flex;
-    height: 65px;
+    height: 100%;
     .container {
       width: 98%;
       margin: 0 auto;
@@ -40,10 +27,12 @@
         font-family: $nav-font;
         color: white;
         display: flex;
+        flex-direction: column;
         list-style: none;
         width: 700px;
         justify-content: space-between;
         li {
+          margin-top: 30px;
           a {
             text-decoration: none;
             &:visited {
@@ -55,3 +44,16 @@
     }
   }
 }
+
+@media (min-width: 768px) {
+  .main-mobile-nav {
+    display: none;
+  }
+
+  #ham {
+    display: none;
+  }
+}
+
+
+
