--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -1,3 +1,4 @@
+/*
 @import "../modules/variables";
 @import "../base/base";
 .overlay{
@@ -211,12 +212,12 @@
 .container{
   .left {
     .back{
-      /* font-family: "Roboto"; */
-      /* text-transform: uppercase; */
-      /* font-size: 18px; */
-      /* margin-bottom: 100px; */
-      /* display: flex; */
-      /* margin-left: 20px; */
+      !* font-family: "Roboto"; *!
+      !* text-transform: uppercase; *!
+      !* font-size: 18px; *!
+      !* margin-bottom: 100px; *!
+      !* display: flex; *!
+      !* margin-left: 20px; *!
       position: absolute;
       top: 0;
     }
@@ -321,4 +322,4 @@
   }
 }
 
-//Modal rooms//
+//Modal rooms//*/
