--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -48,14 +48,14 @@
   }
 }
 
-.back{
-    position: absolute;
-    a{
-      text-decoration: none;
-      color: #4f4f4f;
-      z-index: 2;
-  }
-}
+// .back{
+//     position: absolute;
+//     a{
+//       text-decoration: none;
+//       color: #4f4f4f;
+//       z-index: 2;
+//   }
+// }
 .buttonContent{
   position: absolute;
   top: 39%;
@@ -210,16 +210,7 @@
 
 .container{
   .left {
-    .back{
-          /* font-family: "Roboto"; */
-    /* text-transform: uppercase; */
-    /* font-size: 18px; */
-    /* margin-bottom: 100px; */
-    /* display: flex; */
-    /* margin-left: 20px; */
-    position: absolute;
-    top: 0;
-    }
+  
     display: block;
     width: 40%;
     margin: 0 auto;
