--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -16,10 +16,10 @@
   flex-direction: column;
   text-align: center;
   line-height: 150%;
-  .back.backMobile{
+  .back.backMobile {
     margin: 0;
     position: absolute;
-    top:10px;
+    top: 10px;
     left: 20px;
   }
   .subTitle {
@@ -151,6 +151,7 @@
               }
             }
             .values {
+              max-width:200px;
               margin-left: 50px;
               color: $title;
               font-weight: 400;
@@ -211,113 +212,113 @@
   }
 }
 
-.container {
-
-  .back {
-    position: absolute;
-    a {
-      text-decoration: none;
-      color: #4f4f4f;
-      z-index: 2;
-    }
-  }
-  .left {
-
-    display: block;
-    width: 40%;
-    margin: 0 auto;
-
-    .description {
-      margin-left: 65px;
-      margin-top: 65px;
-      padding-right: 20px;
-      .subTitle {
-        width: 295px;
-      }
-      .paragraphe {
-        margin: 0 auto;
-      }
-      .btn {
-        margin-left: 75px;
-        margin-top: 42px;
-        border: 1px solid $title;
-        width: 100px;
-        color: $title;
-        padding: 10px;
+.rooms {
+  .container {
+    .back {
+      position: absolute;
+      a {
+        text-decoration: none;
+        color: #4f4f4f;
+        z-index: 2;
       }
     }
-    .specs {
+    .left {
+
       display: block;
-      width: 90%;
-      height: 166px;
-      position: relative;
-      bottom: 0;
-      background: $ligthgrey;
-      padding: 30px 30px 30px 65px;
+      width: 40%;
       margin: 0 auto;
 
-      .content {
-        display: flex;
-        ul {
-          list-style: none;
-          li {
-            margin-bottom: 42px;
+      .description {
+        margin-left: 65px;
+        margin-top: 65px;
+        padding-right: 20px;
+        .subTitle {
+          width: 295px;
+        }
+        .paragraphe {
+          margin: 0 auto;
+        }
+        .btn {
+          margin-left: 75px;
+          margin-top: 42px;
+          border: 1px solid $title;
+          width: 100px;
+          color: $title;
+          padding: 10px;
+        }
+      }
+      .specs {
+        display: block;
+        width: 90%;
+        height: 166px;
+        position: absolute;
+        bottom: 0;
+        background: $ligthgrey;
+        padding: 30px 30px 30px 65px;
+        margin: 0 auto;
+
+        .content {
+          display: flex;
+          ul {
+            list-style: none;
+            li {
+              margin-bottom: 42px;
+            }
+          }
+          .values {
+            margin-left: 20px;
+            color: $title;
+            font-weight: 400;
           }
         }
-        .values {
-          margin-left: 50px;
-          color: $title;
-          font-weight: 400;
+      }
+    }
+    .right {
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+      .rooms_list {
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+        width: 320px;
+        display: flex;
+        font-weight: 400;
+        font-size: 16px;
+        list-style: none;
+        justify-content: space-between;
+        z-index: 7;
+        li {
+          text-align: right;
+          margin-bottom: 20px;
+          cursor: pointer;
         }
       }
-    }
-  }
-  .right {
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    .rooms_list {
-      left: 50%;
-      transform: translateX(-50%);
-      position: absolute;
-
-      width: 320px;
-      display: flex;
-      color: $title;
-      font-weight: 400;
-      font-size: 16px;
-      list-style: none;
-      justify-content: space-between;
-      z-index: 7;
-      li {
-        text-align: right;
-        margin-bottom: 20px;
-        cursor: pointer;
-      }
-    }
-    .room_box {
-      display: block;
-      background: rgba(0, 217, 145, 0.81);
-      width: 50px;
-      height: 40px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      z-index: 10;
-      .name {
-        width: 350px;
+      .room_box {
+        display: block;
+        background: rgba(0, 217, 145, 0.81);
+        width: 200px;
+        height: 150px;
         position: absolute;
-        line-height: 84px;
-        font-size: 16px;
-        word-break: normal;
-        color: white;
-        top: -25px;
-        left: 6px;
-        z-index: 100;
+        bottom: 0;
+        left: 0;
+        z-index: 10;
+        .name {
+          width: 350px;
+          position: absolute;
+          line-height: 84px;
+          font-size: 30px;
+          word-break: normal;
+          color: white;
+          top: 25%;
+          left: 6px;
+          z-index: 100;
+        }
       }
-    }
-    .img_container_room {
-      position: relative;
+      .img_container_room {
+        position: relative;
+      }
     }
   }
 }
+
