--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -137,7 +137,7 @@
         .specs {
 
           width: 90%;
-          height: 166px;
+          height: 90px;
           position: absolute;
           bottom: 0;
           background: $ligthgrey;
@@ -147,11 +147,11 @@
             ul {
               list-style: none;
               li {
-                margin-bottom: 42px;
+                margin-bottom: 20px;
               }
             }
             .values {
-              max-width:200px;
+              max-width: 300px;
               margin-left: 50px;
               color: $title;
               font-weight: 400;
@@ -229,7 +229,7 @@
       margin: 0 auto;
 
       .description {
-        margin-left: 65px;
+        margin-left: 50px;
         margin-top: 65px;
         padding-right: 20px;
         .subTitle {
@@ -250,11 +250,11 @@
       .specs {
         display: block;
         width: 90%;
-        height: 166px;
+        height: 110px;
         position: absolute;
         bottom: 0;
         background: $ligthgrey;
-        padding: 30px 30px 30px 65px;
+        padding: 30px 30px 30px 50px;
         margin: 0 auto;
 
         .content {
@@ -262,11 +262,9 @@
           ul {
             list-style: none;
             li {
-              margin-bottom: 42px;
             }
           }
           .values {
-            margin-left: 20px;
             color: $title;
             font-weight: 400;
           }
@@ -281,10 +279,10 @@
         left: 50%;
         transform: translateX(-50%);
         position: absolute;
-        width: 320px;
+        width: 400px;
         display: flex;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 20px;
         list-style: none;
         justify-content: space-between;
         z-index: 7;
@@ -298,7 +296,7 @@
         display: block;
         background: rgba(0, 217, 145, 0.81);
         width: 200px;
-        height: 150px;
+        height: 170px;
         position: absolute;
         bottom: 0;
         left: 0;
@@ -322,3 +320,14 @@
   }
 }
 
+@media (max-width: 1295px) {
+  .rooms {
+    .names {
+      display: none;
+    }
+
+    .container .left .specs .content .values {
+      margin-left: 0px;
+    }
+  }
+}
